src/main/java/yapl/impl/Example.jj
PARSER_BEGIN(Example)

public class Example {

  public static void main(String args[]) throws ParseException {
    Example parser = new Example(System.in);
    parser.input();
  }

}

PARSER_END(Example)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{

  < A_LITERAL: "a" >
| < B_LITERAL: "b" >
| < C_LITERAL: "c" >

}

void A():
{}
{
  LOOKAHEAD(2) <A_LITERAL> A() 
| <B_LITERAL>
}


void input() :
{}
{
  ( LOOKAHEAD(2) A() | <A_LITERAL>)<C_LITERAL> 
  <EOF>
}
